Fix: reemplazar comentario JSX por comentario HTM

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="PS2 Emulator Web" />
     <title>PS2 Emulator Web</title>
-    <script defer src="/static/js/bundle.js"></script> {/* <-- CORREGIDO AQUÍ */}
+    <script defer src="/static/js/bundle.js"></script> <!-- CORREGIDO AQUÍ -->
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
